--- a/xr_3da/xrGame/game_relations.ltx
+++ b/xr_3da/xrGame/game_relations.ltx
@@ -1,18 +1,18 @@
 [game_relations]
 ;реальное разделение на группы репутаций на шкалы
-rating			= novice, 10, veteran, 50, master, 100, super_master
-reputation		= bad, -20, neutral, 20, good, 40, very_good
+rating			= novice, 30, experienced, 60, veteran, 90, master
+reputation		= terrible, -100, very_bad, -50, bad, -20, neutral, 20, good, 50, very_good, 100, excellent
 
 ;шкалы для вывода названий вместо чисел 
 ;рейтингов, репутаций и благосклонности в интерфейсе
-rating_names		= novice, 10, veteran, 50, master, 100, super_master
-reputation_names	= bad, -20, neutral, 20, good, 40, very_good
-goodwill_names      = deadly_enemy, -50, enemy, -30, hostile, -5, indifferent, 20, companionable, 50, friendly
+rating_names		= novice, 30, experienced, 60, veteran, 90, master
+reputation_names	= terrible, -100, very_bad, -50, bad -20, neutral, 20, good, 50, very_good, 100, excellent
+goodwill_names      = deadly_enemy, -5000, enemy, -2000, hostile, -500, indifferent, 500, companionable, 2000, friendly
 
 
 ;пороговые значения для отношения персонажей
-attitude_neutal_threshold = -25		;когда attitude меньше значения, то выставляется ALife::eRelationEnemy
-attitude_friend_threshold = 50		;когда attitude меньше значения, то выставляется ALife::eRelationNeutral, иначе ALife::eRelationFriend
+attitude_neutal_threshold = -500		;когда attitude меньше значения, то выставляется ALife::eRelationEnemy
+attitude_friend_threshold =  500		;когда attitude меньше значения, то выставляется ALife::eRelationNeutral, иначе ALife::eRelationFriend
 
 ;константы, которые присвоят скриптовые функции set_relation для personal goodwill
 goodwill_enemy  = -100
@@ -21,7 +21,7 @@ goodwill_friend = 100
 
 
 ;названия группировок
-communities		= stalker, 1, monolith, 2, military, 3, killer, 4, ecolog, 1, dolg, 1, freedom, 1, bandit, 1, zombied, 23
+communities		= stalker, 1, monolith, 2, military, 3, killer, 4, ecolog, 5, dolg, 6, freedom, 7, bandit, 8, zombied, 23
 
 
 ;	отношения персонажа к актеру (или другому NPC) вычисляется по формуле
@@ -31,45 +31,44 @@ communities		= stalker, 1, monolith, 2, military, 3, killer, 4, ecolog, 1, dolg,
 ;              reputation_goodwill +			//отношение репутации персонажа к репутации актера из [reputation_relations]
 ;			   rank_goodwill					//отношение ранга персонажа к рангу актера из [rank_relations]
 
-
-
 [communities_relations]
-;				stalker, monolith, military, killer, ecolog, dolg, svoboda, bandit, zombied
-============================================================================================
-stalker		=         0,        0,       20,    -50,      0,    0,       0,      0,      0 
-monolith	=         0,        0,        0,      0,      0,    0,       0,      0,      0 
-military	=        50,        0,       30,      0,      0,    0,       0,      0,      0 
-killer		=       -50,        0,        0,      0,      0,    0,       0,      0,      0 
-ecolog		=         0,        0,        0,      0,      0,    0,       0,      0,      0 
-dolg		=         0,        0,        0,      0,      0,    0,       0,      0,      0 
-freedom		=         0,        0,        0,      0,      0,    0,       0,      0,      0 
-bandit		=         0,        0,        0,      0,      0,    0,       0,      0,      0 
-zombied		=         0,        0,        0,      0,      0,    0,       0,      0,      0 
+;				stalker monolith military killer  ecolog   dolg  svoboda  bandit zombied
+;============================================================================================
+stalker		=		  0,  -5000,   -500,  -3000,    500,	  0,	  0,   -200,  -5000
+monolith	=	  -5000,   5000,  -5000,  -5000,  -5000,  -5000,  -5000,  -5000,   5000
+military	=		  0,  -5000,   5000,  -5000,    250,	100,  -1000,  -5000,  -5000
+killer		=	  -5000,  -5000,  -5000,   1000,	  0,  -5000,	  0,	  0,  -5000
+ecolog		=	   -500,  -5000,   1000,	  0,   5000,   3000,	  0,   -500,  -5000
+dolg		=		  0,  -5000,   -500,  -3000,   3000,   5000,  -5000,  -3000,  -5000
+freedom		=		  0,  -5000,  -3000,	  0,  -1000,  -5000,   5000,	  0,  -5000
+bandit		=	      0,  -5000,   -500,	  0,	  0,	  0,	  0,	  0,  -5000
+zombied		=	  -5000,   5000,  -5000,  -5000,  -5000,  -5000,  -5000,  -5000,   5000
 
 
 [rank_relations]
-;			  	   novice,   veteran,   master,   super_master
+;			  	novice, experienced, veteran, master
 ;================================================================
-novice        =        -5,         0,        0,            0
-veteran       =        -5,         0,        10,           15
-master        =        -5,         0,        0,            0
-super_master  =        -5,         0,        0,            0
-
+novice			=	0,		0,        0,		0
+experienced		=   0,		0,        0,		0
+veteran			=   0,      0,        0,        0
+master			=   0,      0,        0,        0
 
 
 
 [reputation_relations]
-;				   bad,      neutral,   good,     very_good
+;			   terrible, very_bad, bad, neutral, good, very_good, excellent
 ;================================================================
-bad			  =      0,         0,        0,         0	
-neutral		  =      0,         0,        0,         0
-good		  =      0,         0,        0,         0
-very_good     =      0,         0,        0,         0
+terrible		=  3000,  2000,	 1000,	 -500,	-1000,	-2000,	-3000
+very_bad		=  2000,  1200,	  500,	 -400,	 -800,	-1600,	-2000
+bad				=  1000,   600,	  300,	 -200,	 -400,	 -600,	-1000
+neutral			=  -500, -400,	 -200,		0,	  200,	  400,	  500
+good			= -1000,  -600,	 -300,	  200,	  400,	  600,	 1000
+very_good		= -2000, -1000,	 -500,	  400,	  800,	 1200,	 2000
+excellent		= -3000, -2000, -1000,	  500,	 1000,	 2000,	 3000
 
 ;
 ; очки рейтинга и репутации начисляемые за определенные действия
 ;
-
 
 ;коэффициенты "сочувствия" группировок
 ;после воздействия на одного из членов группировки
