--- a/xr_3da/xrGame/zones.ltx
+++ b/xr_3da/xrGame/zones.ltx
@@ -478,7 +478,7 @@ tele_particles_small		= anomaly2\gravity_damage_01_smoke	;anomaly2\gravity_damag
 tele_particles_big			= anomaly2\gravity_damage_02_smoke	
 
 idle_sound			= anomaly\gravi_rumble1;  gravi_idle01							;постоянный звук
-blowout_sound		= anomaly\gravi_blowout6; anomaly_gravy_blast01	;во время выброса(удара) в центре аномалии	
+blowout_sound		= anomaly\anomaly_mincer_blowout; anomaly_gravy_blast01	;во время выброса(удара) в центре аномалии	
 hit_sound			= anomaly\anomaly_gravy_hit1						;на персонаже, когда тот получает хит
 entrance_sound		= anomaly\gravi_idle01								;при попадании объекта в аномалию
 
