--- a/xr_3da/xrGame/zones.ltx
+++ b/xr_3da/xrGame/zones.ltx
@@ -505,7 +505,7 @@ awaking_time		= 1
 blowout_time		= 10000	
 accamulate_time		= 1
 
-
+body_tearing_sound		= anomaly_body_tear_1
 blowout_light_time		= 5999
 blowout_explosion_time	= 5999
 
