--- a/xr_3da/xrGame/zones.ltx
+++ b/xr_3da/xrGame/zones.ltx
@@ -481,7 +481,7 @@ idle_sound			= anomaly\gravi_rumble1;  gravi_idle01							;постоянный звук
 blowout_sound		= anomaly\anomaly_mincer_blowout; anomaly_gravy_blast01	;во время выброса(удара) в центре аномалии	
 hit_sound			= anomaly\anomaly_gravy_hit1						;на персонаже, когда тот получает хит
 entrance_sound		= anomaly\gravi_idle01								;при попадании объекта в аномалию
-
+body_tearing_sound	= anomaly\body_tear_1
 hit_type		= wound
 hit_impulse_scale	= 0.1			;соотношение физического импульса и силы хита
 
@@ -505,7 +505,7 @@ awaking_time		= 1
 blowout_time		= 10000	
 accamulate_time		= 1
 
-body_tearing_sound		= anomaly_body_tear_1
+
 blowout_light_time		= 5999
 blowout_explosion_time	= 5999
 
