--- a/xrStalker/zones.ltx
+++ b/xrStalker/zones.ltx
@@ -481,7 +481,7 @@ idle_sound			= anomaly\gravi_rumble1;  gravi_idle01							;постоянный звук
 blowout_sound		= anomaly\anomaly_mincer_blowout; anomaly_gravy_blast01	;во время выброса(удара) в центре аномалии	
 hit_sound			= anomaly\anomaly_gravy_hit1						;на персонаже, когда тот получает хит
 entrance_sound		= anomaly\gravi_idle01								;при попадании объекта в аномалию
-body_tearing_sound	= anomaly\body_tear_1
+body_tearing_sound	= anomaly\anomaly_body_tear_1
 hit_type		= wound
 hit_impulse_scale	= 0.1			;соотношение физического импульса и силы хита
 
