--- a/xr_3da/xrGame/zones.ltx
+++ b/xr_3da/xrGame/zones.ltx
@@ -558,8 +558,9 @@ sound			= zone_mosquito_bald
 postprocess		= postprocess_gravi
 hit_effect		= explosions\expl_02_sparks
 
-artefacts		= af_blood,0.7, af_mincer_meat, 0.25, af_soul, 0.05
+artefacts		= 
 BirthProbability = 0.9
+
 
 tearing_particles	=anomaly2\body_tear_00
 torn_particles      =anomaly2\body_tear_01
@@ -581,7 +582,6 @@ blowout_sound		= anomaly\anomaly_mincer_blowout; anomaly_gravy_blast01	;во врем€
 hit_sound			= anomaly\anomaly_gravy_hit1						;на персонаже, когда тот получает хит
 entrance_sound		= anomaly\gravi_idle01								;при попадании объекта в аномалию
 body_tearing_sound	= anomaly\anomaly_body_tear_1
-
 hit_type		= wound
 hit_impulse_scale	= 0.1			;соотношение физического импульса и силы хита
 
@@ -601,19 +601,19 @@ light_height		= 1.5			;подъем источника света на высоту
 
 idle_light			= off
 
-awaking_time		= 10000
+awaking_time		= 1
 blowout_time		= 10000	
-accamulate_time		= 10000
+accamulate_time		= 1
 
 
 blowout_light_time		= 5999
 blowout_explosion_time	= 5999
 
 ;параметры телекинеза дл€ зоны
-throw_in_impulse		= 800		;сила вт€гивани€ дл€ единичной массы на рассто€нии один метр
-throw_in_impulse_alive	= 300;800	;сила импульса вт€гивани€ дл€ живых
+throw_in_impulse		= 2000		;сила вт€гивани€ дл€ единичной массы на рассто€нии один метр
+throw_in_impulse_alive	= 400;800	;сила импульса вт€гивани€ дл€ живых
 throw_in_atten			= 3			;коэфф. зат€гивани€ (чем меньше, тем плавнее зат€гивает)
-blowout_radius_percent	= 0.5		;радиус (в процентах от всего радиуса) непосредственно выброса
+blowout_radius_percent	= 0.0		;радиус (в процентах от всего радиуса) непосредственно выброса
 
 tele_height				= 10 ;1.5		;высота подъема телекинеза 
 time_to_tele			= 7000		;врем€ деражани€ объекта в воздухе
@@ -621,23 +621,11 @@ tele_pause				= 3000		;пауза перед тем как снова подн€ть упавший объект
 
 visible_by_detector = on
 
-;; ветер
-blowout_wind		= on
+blowout_wind		= off
 
-blowout_wind_time_start     = 0
-blowout_wind_time_peak      = 5999
-blowout_wind_time_end		= 9999
-blowout_wind_power			= 1			;сила поднимаего ветра (от 0 до 1), в момент blowout_wind_time_peak 
-
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;рождение артефактов во врем€ срабатывани€
-spawn_blowout_artefacts = on   ;on
-
-artefact_spawn_probability = 0.07				;веро€тность, что во врем€ срабатывани€ аномалии будет рожден артефакт
-artefact_spawn_particles = anomaly2\gravi_anomaly_shield_00	;партиклы, которые отыграютс€ на месте рождени€ артефакта (опционально)
-artefact_born_sound =  anomaly\anomaly_gravy_hit1		;звук, который отыграютс€ на месте рождени€ артефакта (опционально)
-
-throw_out_power = 100			;импульс с которым артефакт будет выброшен из зоны в произвольном направлении
-artefact_spawn_height = 10		;(м) высота на центром зоны где будет рожден артефакт
+spawn_blowout_artefacts = off
 
 
 [zone_gravi_zone]
