--- a/xrStalker/environment.ltx
+++ b/xrStalker/environment.ltx
@@ -189,12 +189,12 @@ sun_dir			=	-40.0, 60.0
 12:00:00		=	default_a_02
 
 [default_a_01]
-flares			=	flares_gradient		
-sky_texture		=	sky\sky_5_cube
+flares			=   flares_sun_rise
+sky_texture		=	sky\sky_6_cube
 sky_rotation	=	0
-sky_color		=	0.50,	0.50,	0.50
-far_plane		=	300
-fog_color		=	0.133, 0.125, 0.110
+sky_color		=	1.0,    1.0,  	1.0
+far_plane		=	400
+fog_color		=	0.345,  0.333,  0.427
 fog_density		=	0.9
 rain_density	=	0.0
 rain_color		=	1.0,	1.0,	1.0
@@ -203,19 +203,19 @@ bolt_period		=	3.f
 bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
-ambient			=	0.03,   0.03,  	0.03
+ambient			=	0.06,   0.06,  	0.06
 lmap_color		=	1.0,	1.0,	1.0
-hemi_color		=	0.30,	0.30,	0.30,	1.0
-sun_color		=	0.0,    0.0,  	0.0
-sun_dir			=	-3.0, 292
+hemi_color		=	0.55,   0.55,   0.55,	1.0
+sun_color		=	1.000, 0.384, 0.196
+sun_dir			=	-10, 293
 
 [default_a_02]
-flares			=	flares_gradient		
-sky_texture		=	sky\sky_5_cube
+flares			=   flares_sun_rise
+sky_texture		=	sky\sky_6_cube
 sky_rotation	=	0
-sky_color		=	0.50,	0.50,	0.50
-far_plane		=	300
-fog_color		=	0.133, 0.125, 0.110
+sky_color		=	1.0,    1.0,  	1.0
+far_plane		=	400
+fog_color		=	0.345,  0.333,  0.427
 fog_density		=	0.9
 rain_density	=	0.0
 rain_color		=	1.0,	1.0,	1.0
@@ -224,11 +224,11 @@ bolt_period		=	3.f
 bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
-ambient			=	0.03,   0.03,  	0.03
+ambient			=	0.06,   0.06,  	0.06
 lmap_color		=	1.0,	1.0,	1.0
-hemi_color		=	0.30,	0.30,	0.30,	1.0
-sun_color		=	0.0,    0.0,  	0.0
-sun_dir			=	-3.0, 292
+hemi_color		=	0.55,   0.55,   0.55,	1.0
+sun_color		=	1.000, 0.384, 0.196
+sun_dir			=	-10, 293
 
 
 [sect_vibros]
@@ -493,8 +493,8 @@ bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
 ambient			=	0.03,   0.03,  	0.03
-lmap_color		=	0.30,	0.30,	0.30
-hemi_color		=	0.0,    0.0,  	0.0
+lmap_color		=	1.0,	1.0,	1.0
+hemi_color		=	0.30,	0.30,	0.30,	1.0
 sun_color		=	0.0,    0.0,  	0.0
 sun_dir			=	-3.0, 292
 
