--- a/xr_3da/xrGame/m_stalker.ltx
+++ b/xr_3da/xrGame/m_stalker.ltx
@@ -152,7 +152,7 @@ sound_hit			 = monsters\human\combat\ukr\ukr1_damage,monsters\stalker\wound\woun
 sound_humming		 = monsters\stalker\humming\em1_humming,monsters\stalker\humming\em1_whistle
 sound_alarm			 = monsters\human\combat\ukr\ukr1_
 sound_surrender		 = monsters\human\combat\ukr\ukr1_finding
-sound_backup		 = monsters\human\combat\ukr\ukr1_finding
+sound_backup		 = monsters\human\combat\ukr\ukr1_otstup
 sound_attack		 = monsters\human\combat\ukr\ukr1_attack
 sound_friendly_fire	 = script_sound\reactions\friendly_fire\soldier\soldier_friendlyfire_
 sound_panic_human	 = monsters\human\combat\ukr\ukr1_surrender,monsters\stalker\surrender\em1_surrender,monsters\stalker\copy\default\surrender\em1_surrender
